--- a/src/app/dog-editor/dog-editor.component.html
+++ b/src/app/dog-editor/dog-editor.component.html
@@ -1,5 +1,5 @@
-<h3>Add a new dog </h3>
-<div>
+<h3 >Add a new dog </h3>
+<div class="input">
     <label>Name:
       <input type="text" [(ngModel)]="dog.name" placeholder="Name" />
     </label>
@@ -9,7 +9,7 @@
     <label>Birth Date:
       <input type="date" [(ngModel)]="dog.birthDate" placeholder="Date"  />
     </label>
-    <input *ngIf="!dog.name" type="button" name="btnAddDog"  (click)="addDog()" value="Add dog" />
+    <input type="button" name="btnAddDog"  (click)="addDog()" value="Add dog" />
     <input *ngIf="dog.name" type="button" name="btnAddDog"  (click)="editDog(dog)" value="Edit dog" />
     <input *ngIf="dog.name" type="button" name="btnAddDog"  (click)="cancel()" value="Cancel" />
 
